# crates-example

./: Cargo.toml  person.parquet
bits-op/: Cargo.toml
bits-op/src/: main.rs
crate-example/: Cargo.toml
crate-example/examples/: anyhow.rs  bitfields_demo.rs  bitfields_features.rs  chrono.rs  function-builder.rs  guessgame.rs  iec104.rs  main.rs  rayon.rs  runtime.rs  stopwatch.rs  stream.rs  thiserror.rs  tracing.rs  typing.rs  wiki.rs
example/: Cargo.toml
example/examples/: guess.rs  parquet.rs  struct-builder.rs
rayon-test/: Cargo.toml
rayon-test/src/: lib.rs
serde-lab/: Cargo.toml  rest.sh
serde-lab/src/: main.rs
struct-opt/: Cargo.toml
struct-opt/src/: main.rs
