[workspace]
members = ["bits-op", "crate-example", "rayon-test", "serde-lab", "struct-opt"]
resolver = "2"

[workspace.dependencies]
bit-struct = "0.3.2"
anyhow = "1.0.87"
structopt = "0.3.26"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
warp = "0.3.7"
parquet = "6.1.0"
bon = "3.1.1"
tokio-stream = "0.1.16"
